# cc7515_project

./: CMakeLists.txt  README.md
include/: Square.h  squareCoordinates.h  updateTemp.h  utils.cuh
include/glad/: gl.h  glad.h
output/: benchmark.py  benchmarkCPU.csv  benchmarkGPU.csv  createHeatPlot.py  outputCPU.csv  outputGPU.csv  processOutput.py
src/: Main.cpp  Point.cpp  glad.c  main.cpp  main_CPU.cpp  main_CUDA.cu  main_cuda.cu  pngwriter.c  updateTemp_CPU.cpp  updateTemp_GPU.cu  utils.cpp
src/include/: Point.h  main_CPU.h  main_CUDA.cuh  simulationConf.h  utils.cuh
src/shaders/: default.frag  default.vert
